adding choice button

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,11 @@ stories/stories-fr.json
 stories/stories-es.json
 stories/stories-en.json
 stories/stories-de.json
+assets/images/ambassador-or-sneak.png
+assets/images/Earth.png
+assets/images/Two-Roads.png
+assets/images/stories/covarnius/chapters/1/ChatGPT Image Jul 8, 2025 at 08_16_43 PM.png
+assets/images/stories/covarnius/chapters/1/Chrono-in-spaceship.png
+assets/images/stories/covarnius/chapters/1/Game-over-kitty.png
+assets/images/stories/covarnius/chapters/1/luna_walk.png
+assets/images/stories/covarnius/chapters/2/Covarnius.png
