--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
     "test": "jest",
@@ -49,6 +49,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "latest",
+    "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.0.10",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -57,6 +59,7 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "husky": "^8.0.0",
     "jest": "^30.0.4",
+    "react-test-renderer": "^19.0.0",
     "ts-jest": "^29.4.0",
     "typescript": "~5.8.3"
   },
